--- a/index.html
+++ b/index.html
@@ -289,106 +289,105 @@
 
     <script>
         const truthList = [
-            "你第一次自慰是什么时候，用了什么工具？",
-            "你最想跟我尝试的性爱姿势是哪个，为什么？",
-            "你有没有在公共场合做过爱，最刺激的一次是哪次？",
-            "你最喜欢我身体的哪个部位，想怎么玩弄它？",
-            "你做过最下流的性幻想是什么，细节说清楚。",
-            "你有没有偷看过别人的性爱现场，感觉如何？",
-            "你最想撕掉我哪件衣服，用什么方式？",
-            "你有没有用过我的内裤自慰过，什么时候？",
-            "你最想让我对你做的变态事是什么？",
-            "你第一次高潮是什么感觉，具体描述一下。",
-            "你有没有嫉妒过我的前任，想过怎么报复？",
-            "你最喜欢哪种性爱玩具，想怎么用在我身上？",
-            "你有没有在梦里跟我做过爱，梦里是什么场景？",
-            "你最想在哪个公共场所跟我做爱，为什么？",
-            "你最羞耻的性经历是什么，讲出来。",
-            "你有没有偷偷闻过我的内衣，感觉怎么样？",
-            "你最想让我叫你什么性感昵称？",
-            "你最喜欢我的哪个性爱技巧，为什么？",
-            "你有没有一边想着我一边自慰过，具体怎么想的？",
-            "你最想让我对你说哪句下流话？",
-            "你最喜欢哪种前戏，想让我怎么做？",
-            "你有没有试过跟别人电话性爱，讲讲细节。",
-            "你最想让我穿哪件性感内衣，然后怎么脱掉？",
-            "你最喜欢哪种性爱声音，我该怎么叫？",
-            "你有没有因为我硬过/湿过，什么时候？",
-            "你最想跟我尝试的禁忌玩法是什么？",
-            "你有没有偷看过色情片，最喜欢哪一类？",
-            "你最想让我舔你哪里，为什么？",
-            "你有没有幻想过3P，对象是谁？",
-            "你最喜欢我身上哪种味道，想怎么享受？",
-            "你有没有在洗澡时自慰过，想着谁？",
-            "你最想跟我做的疯狂性爱地点是哪里？",
-            "你最喜欢哪种性爱节奏，快还是慢？",
-            "你有没有因为我穿某件衣服而硬过/湿过？",
-            "你最想让我对你用哪种性玩具？",
-            "你有没有试过角色扮演，最想演什么？",
-            "你最喜欢我吻你哪里，为什么？",
-            "你有没有幻想过被我绑起来，具体怎么玩？",
-            "你最想让我对你说哪句挑逗的话？",
-            "你有没有偷看过我的裸照，感觉如何？",
-            "你最喜欢哪种性爱体位，为什么？",
-            "你有没有因为我生气时觉得我更性感？",
-            "你最想跟我尝试的SM玩法是什么？",
-            "你有没有因为我而看色情片，哪部？",
-            "你最喜欢我哪个性感表情，想怎么回应？",
-            "你有没有试过在车里自慰，想ing谁？",
-            "你最想让我对你做的下流事是什么？",
-            "你有没有因为我的声音硬过/湿过？",
-            "你最喜欢我摸你哪里，怎么摸？",
-            "你有没有幻想过跟我公开做爱，哪里？",
-            "你最想让我对你用哪种性感语气说话？",
-            "你有没有因为我的某个动作而高潮过？",
-            "你最喜欢哪种性爱场景，想跟我拍一部？",
-            "你有没有偷用过我的东西自慰？",
-            "你最想跟我尝试的性爱时间是多久？",
-            "你有没有因为我的味道而兴奋过？",
-            "你最喜欢我哪个性爱习惯，为什么？",
-            "你有没有幻想过我在你面前脱光？",
-            "你最想让我对你做的羞耻玩法是什么？",
-            "你有没有因为我而买过性玩具？",
-            "你最喜欢哪种性爱高潮方式，为什么？",
-            "你有没有偷听过我洗澡的声音？",
-            "你最想跟我尝试的性爱地点是哪里？",
-            "你有没有因为我的眼神而硬过/湿过？",
-            "你最喜欢我叫床的哪句，模仿给我听。",
-            "你有没有幻想过跟我玩多人游戏？",
-            "你最想让我对你做的挑逗动作是什么？",
-            "你有没有因为我的某个部位而自慰过？",
-            "你最喜欢哪种性爱前戏，想怎么玩？",
-            "你有没有偷看过我的隐私部位？",
-            "你最想跟我尝试的性爱挑战是什么？",
-            "你有没有因为我生气时想跟我做爱？",
-            "你最喜欢我哪个性感动作，描述一下。",
-            "你有没有幻想过我在别人面前脱给你看？",
-            "你最想让我对你用的性感昵称是什么？",
-            "你有没有因为我的笑声而硬过/湿过？",
-            "你最喜欢哪种性爱结束方式，为什么？",
-            "你有没有偷闻过我的衣服，哪件？",
-            "你最想跟我尝试的性爱道具是什么？",
-            "你有没有因为我的某个动作而高潮过？",
-            "你最喜欢我哪个性爱表情，想怎么回应？",
-            "你有没有试过跟我视频性爱，感觉如何？",
-            "你最想让我对你做的羞耻事是什么？",
-            "你有没有因为我的吻而硬过/湿过？",
-            "你最喜欢哪种性爱灯光，想怎么布置？",
-            "你有没有偷看过我的性感照片？",
-            "你最想跟我尝试的性爱音乐是什么？",
-            "你有没有因为我的某个习惯而兴奋过？",
-            "你最喜欢我哪个性爱声音，想怎么模仿？",
-            "你有没有幻想过我在浴室里对你做坏事？",
-            "你最想让我对你做的变态玩法是什么？",
-            "你有没有因为我的身体而买色情片？",
-            "你最喜欢哪种性爱触感，为什么？",
-            "你有没有偷摸过我的身体，什么时候？",
-            "你最想跟我尝试的性爱冒险是什么？",
-            "你有没有因为我的某个动作而硬过/湿过？",
-            "你最喜欢我哪个性爱姿势，为什么？",
-            "你有没有幻想过我在公众面前挑逗你？",
-            "你最想让我对你说的下流情话是什么？",
-            "你有没有因为我而试过新的性爱方式？"
+"我做什么样动作会让你觉得腿软？",
+"你最想我在你身上用哪种玩具？",
+"你最想让我在床上扮演什么角色？",
+"我做什么动作你会觉得我在勾引你？",
+"我咬你哪里你会疼并快乐着？",
+"你有没有幻想过用鞭子抽我？",
+"你又没有幻想过我用鞭子抽你？",
+"你幻想过在哪些公共场合做爱？",
+"上次你特别想上我却没得逞是什么时候？",
+"你最近做过最下流的梦，是梦到什么了？",
+"你最喜欢的做爱姿势是什么？",
+"你最想我穿着哪件衣服，你疯狂的把它撕烂？",
+"你觉得我身体最性感的部位是哪里？",
+"你觉得你身体最性感的部位是哪里？",
+"你又没有幻想我们在游泳池亲热？",
+"你有没有幻想过我们在阳台做爱？",
+"你有没有用我的内衣自慰过，最近是什么时候？",
+"你觉得我的叫床声音怎么样，还需要什么改进？",
+"你第一次对我产生性幻想是什么时候？",
+"你第一次偷摸我是什么时候？",
+"你有没有梦到过我和别人亲热，你有什么感觉？",
+"你最近一次梦到和别人亲热是什么时候，和谁？",
+"我穿什么样的内衣你会觉得把持不住？",
+"你最喜欢我吻你身体哪个部位？",
+"你最喜欢吻我身体的那个部位？",
+"你最喜欢我穿那种制服勾引你？",
+"你有没有幻想过上班时间和我偷情？",
+"在床上你想更主动还是想让我更主动？",
+"你最想在哪件家具上和我做爱？",
+"你幻想过在飞机或火车上做爱吗？",
+"你幻想过在演唱会或电影院做爱吗？",
+"你想不想一边做饭一边做爱？",
+"你想不想一边吃饭一边做爱？",
+"你想不想和我一起看成人电影？",
+"你喜欢什么风格的成人电影？",
+"你更喜欢成人电影，成人漫画，还是色情小说？",
+"在床上你喜欢对我更温柔还是对我更粗暴？",
+"在床上你喜欢我对你更温柔还是对你更粗暴？",
+"咬唇和舔唇，你觉得哪种更性感？",
+"最近一次我吻你你就湿了/硬了是什么时候？",
+"亲吻的时候你喜欢哪种节奏？",
+"只穿一件衬衫和全裸，你更喜欢哪种？",
+"你想不想在公共场所的卫生间/更衣室和我做爱？",
+"滴蜡和电击，用在我身上，你最想选哪个？",
+"滴蜡和点击，用在你身上，你最想享受哪个？",
+"你能想到在我面前做的最下贱的事是什么？",
+"你想让我在你面前做的最下贱的事是什么？",
+"你想不想做我的人体盛果盘？",
+"你想不想我做你的人体盛果盘？",
+"你最想在我身上尝试的新动作是什么？",
+"你想不想穿戴着情趣玩具和我逛街？",
+"在车库和在车里做爱，哪种会让你觉得更刺激？",
+"我穿着露脐装出门，你会有什么想法？",
+"如果我被一张大网困住了，你最想做什么？",
+"我被铁链绑住了。你现在想到的我是什么姿势？",
+"选一个厨房用品当情趣用品，你会选什么？",
+"你最想我扮演哪个影视角色和你做爱？",
+"吵架的时候，你又没又想过操到我闭嘴？",
+"我被捆绑住任你蹂躏，你能想到什么姿势？",
+"我被淋了一身糖浆，你是想先舔我还是先吻我？",
+"假设我们在太空船上做爱，我们应该用什么姿势？",
+"一阵妖风把我们的衣服都挂掉了，你应该怎么做？",
+"想象我被裸体邮寄给你，你觉得邮票贴在了哪里？",
+"你有没有幻想过在雪地里做爱？",
+"我干什么家务的时候，你最有冲动扑倒我?",
+"如果让你吻遍我全身，你打算按什么顺序吻？",
+"你有没有深夜因为想我而睡不着觉?",
+"你有没有因为我的欲望太强烈而烦恼？",
+"你有没有因为你的欲望太强烈而烦恼？",
+"使用情趣玩具会不会让你觉得更刺激？",
+"有没有哪个时间点你会觉得自己特别淫荡？",
+"有没有哪个时间点你觉得我特别淫荡？",
+"你做过最下流的事是什么？",
+"你有没有什么时候觉得你配不上我？",
+"你有没有什么时候觉得我配不上你？",
+"你上一次因为我而心跳加速是什么时候？",
+"你上一次因为我而呼吸困难是什么时候？",
+"你多久自慰一次，上次是什么时候？",
+"你第一次自慰是什么时候？",
+"你认为我们之间的做爱频率太高了还是太低了？",
+"你认为我们每次做爱的时间太长了还是太短了？",
+"你觉得你的欲望是更强烈了，还是有点降低了？",
+"我被异性搭讪你是嫉妒多一点还是兴奋多一点？",
+"我发现你被异性搭讪，你该怎么辩解？",
+"如果你现在是别人对象，初次见到我你应该怎么搭讪？",
+"如果我现在有别的对象，你初次见到我应该怎么搭讪？",
+"你最喜欢我叫床的哪句，模仿给我听。",
+"你最想跟我尝试的SM玩法是什么？",
+"你有没有因为我生气时觉得我更性感？",
+"你有没有偷看过我的裸照，感觉如何？",
+"你有没有试过电话性爱？你怎么看电话性爱？",
+"你最喜欢哪种前戏，想让我怎么做？",
+"你是喜欢最舒服的姿势，还是喜欢尝试不同姿势？",
+"你最喜欢我的哪个性爱技巧，为什么？",
+"你有没有偷看过别人的性爱现场，感觉如何？",
+"你最想让我对你说的一句挑逗话是什么？",
+"你最喜欢我用哪种语气和你调情？",
+"你有没有在我睡着的时候偷偷摸过我？",
+"你有没有偷看过别的异性洗澡或换衣服？",
         ];
 
         const dareList = [
