--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         });
 
         rulesButton.addEventListener('click', () => {
-            const rules = "游戏规则：\n1. 双方轮流点击红方或蓝方按钮。\n2. 单独点击不触发骰子跳动，需两个按钮都点击后，骰子同时跳动。\n3. 点数大的一方获胜，平局自动结束并重新开始。\n4. 获胜后随机显示真心话或大冒险。\n5. 可选择执行或耍赖，耍赖后当前任务变灰并显示另一项。\n6. 点击“重新洗牌”重置游戏，“买点道具”跳转购买页面。";
+            const rules = "游戏规则：\n1. 两人各选择一个颜色按钮。\n2. 两人分别按下按钮，骰子同时跳动。\n3. 点数大的一方获胜，平局自动结束并重新开始。\n4. 获胜方监督失败一方执行显示的真心话或大冒险。\n5. 点击已执行开始下一局。如果耍赖，可以查看未显示的真心话或大冒险，可以二选一。\n6. 点击“重新洗牌”重置游戏，“买点道具”跳转欢喜生活馆微信商城。";
             alert(rules);
         });
 
