--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
     <script>
         const truthList = [
-"我做什么样动作会让你觉得腿软？",
+"我做什么样的动作会让你觉得腿软？",
 "你最想我在你身上用哪种玩具？",
 "你最想让我在床上扮演什么角色？",
 "我做什么动作你会觉得我在勾引你？",
