--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         });
 
         rulesButton.addEventListener('click', () => {
-            const rules = "游戏规则：\n1. 两人各选择一个颜色按钮。\n2. 两人分别按下按钮，骰子同时跳动。\n3. 点数大的一方获胜，平局自动结束并重新开始。\n4. 获胜方监督失败一方执行显示的真心话或大冒险。\n5. 点击已执行开始下一局。如果耍赖，可以查看未显示的真心话或大冒险，可以二选一。\n6. 点击“重新洗牌”重置游戏，“买点道具”跳转欢喜生活馆微信商城。";
+            const rules = "游戏规则：\n1. 两人各自选择一个按钮\n2. 分别按下按钮后骰子跳动\n3. 点数大的获胜，败者执行游戏提示\n4. 点击已执行开始下一局\n5. 如果耍赖，可以多一条选项，二选一。耍赖会被记录\n6. 牌库各100张牌，依次随机出现";
             alert(rules);
         });
 
