--- a/index.html
+++ b/index.html
@@ -391,23 +391,64 @@
         ];
 
         const dareList = [
-            "脱光衣服，在我面前跳一段性感舞。",
-            "用舌头舔我的耳朵，持续30秒。",
-            "在我身上涂满巧克力酱，然后舔干净。",
-            "给我做一次全身按摩，只用嘴。",
-            "穿上我的内衣，在房间里走一圈。",
-            "用手指在我身上画爱心，从头到脚。",
-            "蒙上眼睛，让我对你做任何事5分钟。",
-            "在我面前自慰，直到高潮。",
-            "用冰块在我身上滑动，直到融化。",
-            "给我拍一张你的裸照，发给我。",
-            "在我身上写下最下流的话，然后读出来。",
-            "模仿色情片里的叫声，持续1分钟。",
-            "用我的内裤蒙住你的脸，闻30秒。",
-            "在我面前脱衣服，每件脱得慢一点。",
-            "让我绑住你的手，然后挑逗你5分钟。",
-            "用牙齿解开我的裤子拉链。",
-            "在我身上撒满玫瑰花瓣，然后亲遍。",
+"趴在地上，让我骑着你绕房间走三分钟。",
+"用丝袜蒙住我的眼睛，然后亲吻我的锁骨。",
+"用最骚的方式撩头发，要撩到我满意。",
+"模仿任意一种动物发情时的样子。",
+"温柔地对着我的脸吹气，吹三分钟。",
+"拿一双筷子表演舔筷子，表演的要够色情。",
+"给我做一个三分钟的色情按摩。",
+"蒙住我的眼睛，亲我三分钟。",
+"只用嘴，脱掉我的一件衣服。",
+"用冰块在我肚子上滑动然后舔掉水迹。",
+"用嘴叼着我的内衣绕房间走一圈。",
+"在我耳边喘息三分钟，模仿高潮。",
+"模仿色情片里的呻吟声，持续三分钟。",
+"在我屁股上拍一下，然后亲上去。",
+"在我胸膛涂上蜂蜜然后舔干净。",
+"用舌头舔我的耳朵，持续三分钟。",
+"穿上我的内衣，在房间里走三分钟。",
+"现在自拍一张你的裸照，发给我。",
+"用我的内裤蒙住你的脸三分钟。",
+"用舌头在我的背上写I LOVE YOU。",
+"拉着我的手帮你自慰三分钟。",
+"让我在你身上滴低温蜡烛，至少5滴。",
+"用我的大腿腿夹住你的脸，持续1分钟。",
+"用胸部给我背上涂满润滑液。",
+"用我的胸部帮你按摩脸。",
+"用嘴帮我脱掉袜子，亲吻我的脚背。",
+"在我大腿上留下一个吻痕。",
+"在我面前展示你最下流的动作。",
+"在我胸口摆上4张扑克牌，用舌头一个一个翻过来。",
+"全身裸体，拿一张毛巾，表演草裙舞。",
+"蒙上眼睛，然后成功亲到我的嘴。",
+"在我腰上留下一个吻痕。",
+"在我胸部留下一个吻痕。",
+"用舌头在我的脊椎上从上舔到下。",
+"含一颗糖一分钟，然后喂给我。",
+"在我的胸上滴上酸奶，然后顺着酸奶流痕舔下去。",
+"在我的大腿滴上酸奶，然后顺着酸奶流痕舔下去。",
+"绑住我的双脚，亲吻我的膝盖弯。",
+"绑住我的双手，亲吻我的腋窝。",
+"倚着门框给我跳三分钟钢管舞。",
+"用水果果肉涂抹我的肚子，舔干净，然后吃掉水果。",
+"在我胸前写上最淫荡的话，然后读出来。",
+"用尺子量我的腿，5CM做一个标记，然后亲吻每个标记。",
+"在我肚子上滴上饮料，然后吹起吹成树杈，并舔干净。",
+"把牙膏挤在我手指上，然后拉着我的手给你刷牙。",
+"用牙签在我身上画一副春宫画。",
+"用水性笔在我身上画一副春宫画。",
+"裸体穿雨衣跳热舞三分钟。",
+"用避孕套吹一个大气球，然后慢慢放气让气吹自己的私处。",
+"用一条绳子或毛线，给我绑一条内裤。",
+"用一条绳子或毛线，给我绑一个文胸。",
+"我喊一颗糖，你用舌头把糖捞出去。",
+"听我的心跳三分钟，同时用勺子在我大腿上敲出心跳节奏。",
+"全身只穿着睡衣或衬衫，在莲蓬头下把自己上身打湿。",
+"把头发当浴花，用头帮我的身体涂沐浴露。",
+"裸体穿着围裙拿着锅，假装给我煮饭三分钟。",
+"无实物表演我们即将分别，演出恋恋不舍。",
+"用跳蛋或震动棒扮演汽车，在我的身体边缘跑一圈。",
             "给我做一个性感的脱衣舞表演。",
             "用舌头舔我的手指，像舔别的东西一样。",
             "在我面前摆出10个体位，每种坚持10秒。",
@@ -449,48 +490,6 @@
             "让我用冰块在你身上写字。",
             "在我面前展示你最色情的表情。",
             "用舌头舔我的脚趾，持续30秒。",
-            "让我在你身上涂满润滑油，然后滑来滑去。",
-            "在我面前脱光，摆出最羞耻的姿势。",
-            "用我的胸部帮你按摩脸。",
-            "在我身上撒满糖粉，然后舔干净。",
-            "让我用鞭子抽你的屁股10下。",
-            "在我面前表演一次高潮。",
-            "用舌头在我身上写下你的名字。",
-            "让我在你身上涂满巧克力，然后吃掉。",
-            "在我面前跳一段裸体扭臀舞。",
-            "用嘴帮我脱掉袜子。",
-            "在我身上留下20个吻痕。",
-            "让我用绳子绑住你的脚，然后挑逗你。",
-            "在我面前模仿色情片的呻吟。",
-            "用我的手挑逗你的敏感部位。",
-            "在我身上摸满奶油，然后舔干净。",
-            "让我用冰块在你身上画爱心。",
-            "在我面前展示你最下流的动作。",
-            "用舌头舔我的嘴唇，持续30秒。",
-            "让我在你身上滴满蜂蜜。",
-            "在我面前表演一次色情脱衣秀。",
-            "用我的脚帮你按摩全身。",
-            "在我身上写下最色情的话。",
-            "让我用牙齿咬你的耳朵。",
-            "在我面前跳一段裸体舞，持续3分钟。",
-            "用舌头在我身上画出性感图案。",
-            "让我在你身上涂满果酱，然后舔掉。",
-            "在我面前大声喊出你的性幻想。",
-            "用我的腿帮你按摩敏感部位。",
-            "在我身上撒满酒精，然后舔干净。",
-            "让我用鞭子轻轻抽你的胸。",
-            "在我面前表演一次色情自慰秀。",
-            "用舌头舔我的肚脐，持续30秒。",
-            "让我在你身上涂满润滑油，然后玩滑梯。",
-            "在我面前摆出最色情的姿势。",
-            "用我的胸部帮你按摩背。",
-            "在我身上涂满糖浆，然后舔干净。",
-            "让我用冰块挑逗你的全身。",
-            "在我面前模仿色情片的高潮叫声。",
-            "用舌头在我身上写下“操我”。",
-            "让我在你身上滴满热油。",
-            "在我面前跳一段裸体挑逗舞。",
-            "用我的身体当画布，涂满任何东西。"
         ];
 
         const redButton = document.getElementById('red-button');
