--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
         });
 
         rulesButton.addEventListener('click', () => {
-            const rules = "游戏规则：\n1. 两人各自选择一个按钮\n2. 分别按下按钮后骰子跳动\n3. 点数大的获胜，败者执行游戏提示\n4. 点击已执行开始下一局\n5. 如果耍赖，可以多一条选项，二选一。耍赖会被记录\n6. 牌库各100张牌，依次随机出现";
+            const rules = "游戏规则：\n1. 两人各自选择一个按钮\n2. 分别按下按钮后骰子跳动\n3. 点数小失败，按提示执行\n4. 点击已执行开始下一局\n5. 如果耍赖会被记录，可以多一条选项\n6. 牌库各100张牌，依次随机出现";
             alert(rules);
         });
 
