--- a/index.html
+++ b/index.html
@@ -5,6 +5,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>真心话大冒险</title>
     <style>
+        /* 年龄验证样式 */
+        #age-verify-mask {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #age-verify-dialog {
+            background: #fff;
+            padding: 25px;
+            border-radius: 15px;
+            text-align: center;
+            width: 85%;
+            max-width: 320px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+        }
+
+        #age-verify-dialog h2 {
+            color: #ff4444;
+            margin: 0 0 20px;
+            font-size: 22px;
+            font-weight: bold;
+        }
+
+        #age-verify-dialog p {
+            color: #666;
+            line-height: 1.6;
+            margin-bottom: 25px;
+        }
+
+        #age-verify-buttons {
+            display: flex;
+            justify-content: space-between;
+            gap: 15px;
+        }
+
+        .age-btn {
+            flex: 1;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: all 0.3s;
+        }
+
+        #underage-btn {
+            background: #ff6666;
+            color: white;
+        }
+
+        #underage-btn:hover {
+            background: #ff4444;
+        }
+
+        #adult-btn {
+            background: #6699ff;
+            color: white;
+        }
+
+        #adult-btn:hover {
+            background: #4477ff;
+        }
+
+        /* 原有游戏样式 */
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            overflow: hidden;
+        }
+
+        #game-container {
+            width: 90vw;
+            height: calc(90vw * 16 / 9);
+            max-width: 360px;
+            max-height: 640px;
+            background-color: #fffdf0;
+            border: 2px solid #333;
+            border-radius: 10px;
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            box-sizing: border-box;
+            margin-top: -10vh;
+            display: none; /* 初始隐藏 */
+        }
         body {
             margin: 0;
             padding: 0;
@@ -247,6 +350,19 @@
     </style>
 </head>
 <body>
+    <!-- 年龄验证弹窗 -->
+    <div id="age-verify-mask">
+        <div id="age-verify-dialog">
+            <h2>⚠️ 成人内容警告 ⚠️</h2>
+            <p>本游戏包含成人向内容，仅限18周岁以上玩家使用！</p>
+            <div id="age-verify-buttons">
+                <button id="underage-btn" class="age-btn">未满18岁</button>
+                <button id="adult-btn" class="age-btn">我已成年</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 游戏主体 -->
     <div id="game-container">
         <div id="task-area">
             <div id="truth">真心话：</div>
@@ -274,6 +390,7 @@
             </div>
         </div>
     </div>
+
     <div id="dialog">
         <h3>等待执行中</h3>
         <div id="dialog-buttons">
@@ -288,7 +405,34 @@
     </div>
 
     <script>
-        const truthList = [
+        // 年龄验证逻辑
+        const ageVerifyMask = document.getElementById('age-verify-mask');
+        const gameContainer = document.getElementById('game-container');
+        const extraButtons = document.getElementById('extra-buttons');
+
+        document.getElementById('adult-btn').addEventListener('click', () => {
+            ageVerifyMask.style.display = 'none';
+            gameContainer.style.display = 'block';
+            extraButtons.style.display = 'flex';
+            localStorage.setItem('ageVerified', 'true'); // 设置验证标记
+        });
+
+        document.getElementById('underage-btn').addEventListener('click', () => {
+            alert('根据相关法律法规要求，即将退出...');
+            window.location.href = 'about:blank';
+            setTimeout(() => {
+                window.close();
+            }, 500);
+        });
+
+        // 检查本地存储（可选功能）
+        if(localStorage.getItem('ageVerified') === 'true') {
+            ageVerifyMask.style.display = 'none';
+            gameContainer.style.display = 'block';
+            extraButtons.style.display = 'flex';
+        }
+
+         const truthList = [
 "我做什么样的动作会让你觉得腿软？",
 "你最想我在你身上用哪种玩具？",
 "你最想让我在床上扮演什么角色？",
@@ -729,7 +873,7 @@
         });
 
         rulesButton.addEventListener('click', () => {
-            const rules = "游戏规则：\n1. 两人各自选择一个按钮\n2. 分别按下按钮后骰子跳动\n3. 点数小失败，按提示执行\n4. 点击已执行开始下一局\n5. 如果耍赖会被记录，可以多一条选项\n6. 牌库各100张牌，依次随机出现";
+            const rules = "游戏规则：\n1. 两人各自选择一个按钮\n2. 分别按下按钮后骰子跳动\n3. 点数小失败，按提示执行\n4. 点击已执行开始下一局\n5. 耍赖会记录，可以多一条选项\n6. 牌库各100张牌，依次随机出现";
             alert(rules);
         });
 
