--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
         document.getElementById('underage-btn').addEventListener('click', () => {
             alert('根据相关法律法规要求，即将退出...');
-            window.location.href = 'about:blank';
+            window.location.href = 'https://chat.deepseek.com';
             setTimeout(() => {
                 window.close();
             }, 500);
