--- a/index.html
+++ b/index.html
@@ -417,9 +417,14 @@
         });
 
         document.getElementById('underage-btn').addEventListener('click', () => {
-            alert('根据相关法律法规要求，即将退出...');
-            window.location.href = 'https://chat.deepseek.com';
-            }, 500);
+            // 跳转至百度并显示提示
+            alert('即将跳转到安全页面...');
+            window.location.href = 'https://www.baidu.com';
+            
+            // 可选：添加延时跳转提升用户体验
+            /* setTimeout(() => {
+                window.location.href = 'https://www.baidu.com';
+            }, 1000); */
         });
 
          const truthList = [
