--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
         document.getElementById('underage-btn').addEventListener('click', () => {
             // 跳转至百度并显示提示
             alert('即将跳转到安全页面...');
-            window.location.href = 'https://www.baidu.com';
+            window.location.href = 'https://chat.deepseek.com';
             
             // 可选：添加延时跳转提升用户体验
             /* setTimeout(() => {
-                window.location.href = 'https://www.baidu.com';
+                window.location.href = 'https://chat.deepseek.com';
             }, 1000); */
         });
 
